--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Python_I.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Python_I.ipynb
@@ -55,27 +55,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8.95 para la familiar o de 9.9 para la mediana \n",
       "Estupendo, se están preparando 2 pizzas familiares y 3 pizzas medianas.\n",
-      "Le mandaremos las 5 pizzas a la dirección av manuel azaña. Serán 47.6. Muchas gracias por su pedido.\n"
+      "Le mandaremos las 5 pizzas a la dirección 12345. Serán 47.6, muchas gracias por su pedido.\n"
      ]
     }
    ],
    "source": [
-    "pizz_familiar = input(\"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana ¿Cuántas pizzas  familiares desea?\")\n",
+    "precio_mediana = 9.90\n",
+    "\n",
+    "precio_familiar = 8.95\n",
+    "\n",
+    "intro = \"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas \\\n",
+    "es de \"+ str(precio_familiar)+ \" para la familiar o de \" + str(precio_mediana) +\" para la mediana \"\n",
+    "\n",
+    "print(intro)\n",
+    "\n",
+    "pizz_familiar = input(\"¿Cuántas pizzas  familiares desea?\")\n",
+    "\n",
     "pizz_mediana = input(\"Estupendo, ¿cuántas pizzas medianas desea?\")\n",
+    "\n",
+    "\n",
     "cantidad = int(pizz_familiar)+int(pizz_mediana)\n",
-    "respuesta1 = \"Estupendo, se están preparando \"+ pizz_familiar+\" pizzas familiares y \"+ pizz_mediana+\" pizzas medianas.\"\n",
+    "\n",
+    "respuesta1 = \"Estupendo, se están preparando \"+ pizz_familiar+\" pizzas familiares y \"+ pizz_mediana+ \\\n",
+    "\" pizzas medianas.\"\n",
+    "\n",
+    "# (alternativa): respuesta1 = \"Estupendo, se están preparando {} pizzas familiares y {} pizzas medianas\".format(pizz_familiar,pizz_mediana)\n",
+    "# (alternativa): respuesta1 = f\"Estupendo, se están preparando {pizz_familiar} pizzas familiares y {pizz_mediana} pizzas medianas\"\n",
+    "\n",
     "print(respuesta1)\n",
+    "\n",
     "dirección  = input(\" Digame su dirección\")\n",
-    "precio = 8.95*float(pizz_familiar) +9.90*float(pizz_mediana)\n",
-    "respuestafinal = \"Le mandaremos las \"+ str(cantidad)+\" pizzas a la dirección \" +dirección+\". Serán \"+ str(precio)+\". Muchas gracias por su pedido.\"\n",
+    "\n",
+    "precio = precio_familiar*float(pizz_familiar) +precio_mediana*float(pizz_mediana)\n",
+    "\n",
+    "respuestafinal = \"Le mandaremos las \"+ str(cantidad)+\" pizzas a la dirección \" +dirección+\". Serán \" \\\n",
+    "+ str(precio)+\", muchas gracias por su pedido.\"\n",
+    "\n",
+    "# (alternativa): respuestafinal = f\"Le mandaremos las {total_pizzas} pizzas a la dirección {direcc}. Serán {total:.2f}€\\n¡Muchas gracias por su pedido!\"\n",
+    "\n",
     "print(respuestafinal)"
    ]
   },
@@ -111,20 +137,39 @@
      "text": [
       "['1', '2', '3']\n",
       "máximo = 3 / mínimo = 1 / sumatorio = 6\n",
-      "¿Es igual que el número máximo menos el mínimo es igual a la suma total dividida entre 5?\n",
+      "¿Es Verdad que el número máximo menos el mínimo es igual a la suma total dividida entre 5?\n",
       "False 2 no es igual a 1.2\n"
      ]
     }
    ],
    "source": [
     "lista=(input(\"Dame tres numeros enteros separados en comas(por ejemplo: 1, 2, 3)\")).split(\",\")\n",
+    "\n",
     "listafinal=list(map(int,lista))\n",
+    "\n",
+    "# (alternativa): a, b, c = lista\n",
+    "# list(a = int(a),b = int(b),c = int(c))\n",
+    "# (esta alternativa es menos robusta, requiere que sepas el número exacto de elementos)\n",
+    "\n",
+    "# (alternativa2): lista2 = [] \n",
+    "# for num in lista:\n",
+    "#   lista2.append(int(num))\n",
+    "# lista2\n",
+    "\n",
+    "# (alternativa3): lista2 = [int(elem) for elem in lista]\n",
+    "\n",
     "print(lista)\n",
+    "\n",
     "print(\"máximo =\",max(listafinal), \"/ mínimo =\", min(listafinal),\"/ sumatorio =\", sum (listafinal))\n",
+    "\n",
     "print(\"¿Es Verdad que el número máximo menos el mínimo es igual a la suma total dividida entre 5?\")\n",
+    "\n",
     "if max(listafinal)-min(listafinal) == sum(listafinal)/5:\n",
-    "    print(\"True\", max(listafinal)-min(listafinal),\"no es igual a\", sum(listafinal)/5)\n",
+    "\n",
+    "    print(\"True\", max(listafinal)-min(listafinal),\"es igual a\", sum(listafinal)/5)\n",
+    "\n",
     "else:\n",
+    "\n",
     "    print(\"False\", max(listafinal)-min(listafinal),\"no es igual a\", sum(listafinal)/5)"
    ]
   }
