--- a/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/03_Live_Session/01_Flujos_de_Control_if_for.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/03_Live_Session/01_Flujos_de_Control_if_for.ipynb
@@ -75,9 +75,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comienza iteración con 4\n",
+      "El numero 4 es un entero\n",
+      "Finaliza iteración con 4\n",
+      "Comienza iteración con 6\n",
+      "El numero 6 es un entero\n",
+      "Finaliza iteración con 6\n",
+      "Comienza iteración con 4.0\n",
+      "El numero 4.0 no es un entero\n",
+      "Finaliza iteración con 4.0\n",
+      "Comienza iteración con 3.0\n",
+      "El numero 3.0 no es un entero\n",
+      "Finaliza iteración con 3.0\n",
+      "Finaliza celda\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [4, 6, 4.0, 3.0]\n",
     "\n",
@@ -85,6 +105,8 @@
     "    print(\"Comienza iteración con\",elemento)\n",
     "    if type(elemento) == int:        \n",
     "        print(\"El numero\", elemento, \"es un entero\")\n",
+    "    else:\n",
+    "        print(\"El numero\", elemento, \"no es un entero\")\n",
     "    print(\"Finaliza iteración con\", elemento)\n",
     "\n",
     "print(\"Finaliza celda\")"
@@ -105,10 +127,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'for' statement on line 3 (1174407838.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(\"Comienza iteración con\",elemento)\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after 'for' statement on line 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [4, 6, 4.0, 3.0]\n",
+    "\n",
+    "for elemento in numeros:\n",
+    "print(\"Comienza iteración con\",elemento)\n",
+    "if type(elemento) == int:        \n",
+    "print(\"El numero\", elemento, \"es un entero\")\n",
+    "else:\n",
+    "print(\"El numero\", elemento, \"no es un entero\")\n",
+    "print(\"Finaliza iteración con\", elemento)\n",
+    "\n",
+    "print(\"Finaliza celda\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,8 +188,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Notable!\n",
+      "Final del programa\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_nota_de_examen = 8\n",
+    "\n",
+    "if mi_nota_de_examen <5:\n",
+    "    print(\"A septiemnbre:()\")\n",
+    "else mi_nota_de_examen <7:\n",
+    "    print(\"Aprobado!\")\n",
+    "\n",
+    "print(\"Final del programa\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,10 +220,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sobresaliente!\n",
+      "Final del programa\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_nota_de_examen = 19\n",
+    "\n",
+    "if  mi_nota_de_examen <5:\n",
+    "    print(\"A septiemnbre:()\")\n",
+    "elif mi_nota_de_examen <7:\n",
+    "    print(\"Aprobado!\")\n",
+    "elif mi_nota_de_examen<9: \n",
+    "    print(\"Notable!\")\n",
+    "else:\n",
+    "    print(\"Sobresaliente!\")\n",
+    "print(\"Final del programa\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -194,7 +276,13 @@
     "alas = True\n",
     "sonido = \"Piar\"\n",
     "patas = 2\n",
-    "\n"
+    "\n",
+    "if pico or alas:\n",
+    "    print (\"Ave\")\n",
+    "elif patas == 4 and sonido == \"Ladrar\":\n",
+    "    print(\"Perro\")\n",
+    "else:\n",
+    "    print(\"Otro animal\")"
    ]
   },
   {
@@ -222,7 +310,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mi_nota_de_examen = 19\n",
+    "\n",
+    "if  0<mi_nota_de_examen <5:\n",
+    "    print(\"A septiemnbre:()\")\n",
+    "elif 5<mi_nota_de_examen <7:\n",
+    "    print(\"Aprobado!\")\n",
+    "elif 6<mi_nota_de_examen<9: \n",
+    "    print(\"Notable!\")\n",
+    "elif 8<mi_nota_de_examen<10:\n",
+    "    print(\"Sobresaliente!\")\n",
+    "else:\n",
+    "    print(\"Nota no valida\")\n",
+    "print(\"Final del programa\")"
+   ]
   },
   {
    "attachments": {},
@@ -284,22 +386,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "7\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "5\n",
+      "5\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "4\n",
+      "6\n",
+      "5\n",
+      "5\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# Si me cambia el numero de alumnos, el for de antes me vale igual\n",
-    "notas_clase = [4,5,7,3,4,6,5,5,4,5,6,7,8,7,6,4,6,5,5,4,5,6,]"
+    "notas_clase = [4,5,7,3,4,6,5,5,4,5,6,7,8,7,6,4,6,5,5,4,5,6,]\n",
+    "for nota in notas_clase:\n",
+    "    print(nota)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lunes\n",
+      "Martes\n",
+      "Miércoles\n",
+      "Jueves\n",
+      "Viernes\n",
+      "Sábado\n",
+      "Domingo\n"
+     ]
+    }
+   ],
    "source": [
     "# Si en vez de numeros, tenemos texto, también nos vale\n",
-    "dias_semana = [\"Lunes\", \"Martes\", \"Miércoles\", \"Jueves\", \"Viernes\", \"Sábado\", \"Domingo\"]\n"
+    "dias_semana = [\"Lunes\", \"Martes\", \"Miércoles\", \"Jueves\", \"Viernes\", \"Sábado\", \"Domingo\"]\n",
+    "for dias in dias_semana:\n",
+    "    print(dias)"
    ]
   },
   {
@@ -311,11 +460,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m\n",
+      "i\n",
+      "e\n",
+      "r\n",
+      "c\n",
+      "o\n",
+      "l\n",
+      "e\n",
+      "s\n",
+      ",\n",
+      " \n",
+      "j\n",
+      "u\n",
+      "e\n",
+      "v\n",
+      "e\n",
+      "s\n"
+     ]
+    }
+   ],
    "source": [
-    "# Fijate que un String también es un iterable\n"
+    "# Fijate que un String también es un iterable\n",
+    "for caracter in \"miercoles, jueves\":\n",
+    "    print(caracter)"
    ]
   },
   {
@@ -335,6 +510,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 8, 4, 5, 7, 6, 6, 5, 6, 7, 8, 9, 8, 7, 5, 7, 6, 6, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_mejoradas = []\n",
+    "for nota in notas_clase:\n",
+    "    notas_mejoradas.append(nota+1)\n",
+    "\n",
+    "notas_mejoradas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 8, 4, 5, 7, 6, 6, 5, 6, 7, 8, 9, 8, 7, 5, 7, 6, 6, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(nota+1)for nota in notas_clase]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -346,10 +565,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 10)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-10,\n",
+       " -9,\n",
+       " -8,\n",
+       " -7,\n",
+       " -6,\n",
+       " -5,\n",
+       " -4,\n",
+       " -3,\n",
+       " -2,\n",
+       " -1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 6,\n",
+       " 7,\n",
+       " 8,\n",
+       " 9,\n",
+       " 10,\n",
+       " 11,\n",
+       " 12,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 17,\n",
+       " 18,\n",
+       " 19]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(-10,20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 7, 4, 1, -2, -5, -8, -11, -14, -17]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(10,-20,-3))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -360,10 +661,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 22)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(len(notas_clase))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(len(notas_clase)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_clase[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 8, 4, 5, 7, 6, 6, 5, 6, 7, 8, 9, 8, 7, 5, 7, 6, 6, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(len(notas_clase)):\n",
+    "    notas_clase[i] = notas_clase[i]+1\n",
+    "notas_clase"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -375,24 +751,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nombres = [\"Pedro\",\"Juan\",\"Manolo\"]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'Pedro'), (1, 'Juan'), (2, 'Manolo')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(enumerate(nombres))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre 0 : Pedro \n",
+      "Nombre 1 : Juan \n",
+      "Nombre 2 : Manolo \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, nombre in enumerate(nombres):\n",
+    "    print(f\"Nombre {i} : {nombre} \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -450,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,10 +863,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n",
+      "6\n",
+      "3\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in nums_bucle:\n",
+    "    if num % 3 == 0:\n",
+    "        print (num)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -474,7 +895,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -488,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
