--- a/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/04_Ejercicios_Extra/03_Ejercicios_Extra_Bucles_if_for.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/04_Ejercicios_Extra/03_Ejercicios_Extra_Bucles_if_for.ipynb
@@ -53,10 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [\"VW\",\"Audi\",\"Renault\",\"VW\",\"BMW\"]\n",
+    "for coche in ejer_1:\n",
+    "    if coche == \"VW\":\n",
+    "        ejer_1.remove(coche)\n",
+    "print(ejer_1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +81,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Audi', 'Renault', 'BMW']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [\"VW\",\"Audi\",\"Renault\",\"VW\",\"BMW\"]\n",
+    "nuevalista = []\n",
+    "for coche in ejer_1:\n",
+    "    if coche != \"VW\":\n",
+    "        nuevalista.append(coche)\n",
+    "print(nuevalista)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +110,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BMW', 'Renault', 'Audi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [\"VW\",\"Audi\",\"Renault\",\"VW\",\"BMW\"]\n",
+    "nuevalista =[]\n",
+    "n = len(ejer_1)-1\n",
+    "while n > -1:\n",
+    "    if ejer_1[n] != \"VW\":\n",
+    "        nuevalista.append(ejer_1[n])\n",
+    "        n=n-1\n",
+    "    else:\n",
+    "        n=n-1\n",
+    "print(nuevalista)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMW\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [\"VW\",\"Audi\",\"Renault\",\"VW\",\"BMW\"]\n",
+    "nuevalista =[]\n",
+    "n = len(ejer_1)-1\n",
+    "print(ejer_1[n])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0, -1, -2, -3, -4, -5, -6, -7, -8, -9, -10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(range(10,-11,-1)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,10 +190,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = \"En un lugar de La Mancha, de cuyo nombre no quiero acordarme\"\n",
+    "n = 0\n",
+    "for caracter in frase:\n",
+    "    if caracter == \"M\" or caracter == \"m\":\n",
+    "        n=n+1\n",
+    "print(n)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,15 +220,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 6, 7, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista4 = list(range(1,11))\n",
+    "copialista4 =list(range(1,11))\n",
+    "for num in lista4:\n",
+    "    if num == 3 or num == 9 or num == 4 :\n",
+    "        copialista4.remove(num)\n",
+    "print(copialista4)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 6, 7, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "newlista = []\n",
+    "n= 1 \n",
+    "while n < 11:\n",
+    "    if n != 4 and n != 3 and n != 9:\n",
+    "        newlista.append(n)\n",
+    "    n=n+1\n",
+    "print(newlista)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
