--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Argumentos_clave-valor.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Argumentos_clave-valor.ipynb
@@ -48,10 +48,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "{'modelo': 'S20', 'marca': 'Samsung', 'camara': '24mpx'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insertar_movil_bd(**clave_valor):\n",
+    "    print(type(clave_valor))\n",
+    "    print(clave_valor)\n",
+    "insertar_movil_bd(modelo = \"S20\",marca = \"Samsung\",camara = \"24mpx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "modelo : S20\n",
+      "marca : Samsung\n",
+      "camara : 24mpx\n",
+      "flip : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insertar_movil_bd(**kwargs):\n",
+    "    for clave, valor in kwargs.items():\n",
+    "        print(clave,\":\",valor)\n",
+    "insertar_movil_bd(modelo = \"S20\",marca = \"Samsung\",camara = \"24mpx\", flip = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +101,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "es muy bueno\n",
+      "no dura lo suficiente la bateria\n",
+      "<class 'dict'>\n",
+      "marca samsung\n",
+      "modelo s20\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insertar_movil(*args,**kwargs):\n",
+    "    print(type(args))\n",
+    "    for i in args:\n",
+    "        print(i)\n",
+    "    \n",
+    "    print(type(kwargs))\n",
+    "    for clave, valor in kwargs.items():\n",
+    "        print(clave,valor)\n",
+    "        \n",
+    "insertar_movil(\"es muy bueno\",\"no dura lo suficiente la bateria\",\\\n",
+    "               marca = \"samsung\",modelo = \"s20\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "arguments cannot follow var-keyword argument (4061382014.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mdef test(**kwargs, *args):\u001b[39m\n                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m arguments cannot follow var-keyword argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test(**kwargs, *args):\n",
+    "    print(\"test\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,10 +163,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.36"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(12.3564,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[54, 24, 12, 3]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted([12,3,24,54],reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "su pedido de television se entregara el 12/12/2023\n",
+      "pongase en contacto con atencion al cliente\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pediddo_online(pedido, fecha, incidencia = False):\n",
+    "    if incidencia == True:\n",
+    "        print(\"pongase en contacto con atencion al cliente\")\n",
+    "    else:\n",
+    "        print(\"su pedido de\", pedido, \"se entregara el\", fecha)\n",
+    "\n",
+    "pediddo_online(\"television\", \"12/12/2023\")\n",
+    "pediddo_online(\"imac\", \"10/11/2023\", incidencia = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +249,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -124,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
