--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/03_Practica_Obligatoria/18_Practica_Obligatoria_Colecciones_Funciones.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/03_Practica_Obligatoria/18_Practica_Obligatoria_Colecciones_Funciones.ipynb
@@ -47,10 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_2 = [1,2,3,4,5]\n",
+    "resultado=[]\n",
+    "for elemento in ejer_2:\n",
+    "    resultado.append(elemento*elemento)\n",
+    "print(resultado)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +81,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Un': 1, 'es': 2, 'binario': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "def encontras_duplicados(*arg):\n",
+    "    resultado = {}\n",
+    "    for elemento in arg:\n",
+    "        x = elemento\n",
+    "        resultado[elemento]=0\n",
+    "        for element in ejer_3:\n",
+    "            if elemento == element:\n",
+    "                resultado[elemento] = resultado[elemento]+1\n",
+    "    print(resultado)\n",
+    "encontras_duplicados(\"Un\",\"es\",\"binario\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,10 +119,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "(29, 45, 67, 78, 90, 5, 2, 4, 7, 9, 4, 2, 4, 4, 6, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "n=0\n",
+    "for elemento9 in ejer_9:\n",
+    "    if elemento9 == 3:\n",
+    "        n=n+1\n",
+    "print(n)\n",
+    "lista2=[]\n",
+    "for elemento6 in ejer_9:\n",
+    "    m=ejer_9.index(elemento6)\n",
+    "    if m > 4:\n",
+    "        lista2.append(elemento6)\n",
+    "tupla2 = tuple(lista2)\n",
+    "print(tupla2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,10 +157,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(29, 45, 67, 78, 90, 5, 2, 4, 7, 9, 4, 2, 4, 4, 6, 7)\n",
+      "No esta en la tupla\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero4=60\n",
+    "print(tupla2)\n",
+    "ffff = 0\n",
+    "for elemento4 in tupla2:\n",
+    "    if elemento4 == numero4:\n",
+    "        ffff = ffff+1\n",
+    "if ffff!= 0:\n",
+    "    print(\"Esta en la tupla\")\n",
+    "else:\n",
+    "    print(\"No esta en la tupla\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,8 +196,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[29, 45, 67, 78, 90, 5, 2, 4, 7, 9, 4, 2, 4, 4, 6, 7]\n",
+      "[29, 45, 67, 78, 90, 5, 2, 4, 7, 9, 4, 2, 4, 4, 6, 7]\n",
+      "{1: 29, 2: 45, 3: 67, 4: 78, 5: 90, 6: 5, 7: 2, 8: 4, 9: 7, 10: 9, 11: 4, 12: 2, 13: 4, 14: 4, 15: 6, 16: 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista5= list(tupla2)\n",
+    "print(lista5)\n",
+    "\n",
+    "set5= set(tupla2)\n",
+    "print(lista5)\n",
+    "\n",
+    "dicc5={}\n",
+    "n=1\n",
+    "for elemento5 in tupla2:\n",
+    "    dicc5[n] = elemento5\n",
+    "    n=n+1\n",
+    "print(dicc5)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,10 +233,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19326120\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "n = 1\n",
+    "for elemento6 in ejer_6:\n",
+    "    n = n*ejer_6[elemento6]\n",
+    "print(n)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,14 +265,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'título': 'b', 'autor': 'a', 'idioma original': 'f', 'año de publicacion': 'g'}, {'título': 'b', 'autor': 'a', 'idioma original': 'f', 'año de publicacion': 'g'}, {'título': 'b', 'autor': 'a', 'idioma original': 'f', 'año de publicacion': 'g'}, {'título': 'b', 'autor': 'a', 'idioma original': 'f', 'año de publicacion': 'g'}]\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "libro1 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "libro2 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "libro3 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "libro4 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "\n",
+    "librería = [libro1,libro2,libro3,libro4]\n",
+    "print(librería)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,10 +296,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'título': 'b', 'autor': 'a', 'idioma original': 'esperanto', 'año de publicacion': 'g'} {'título': 'b', 'autor': 'a', 'idioma original': 'esperanto', 'año de publicacion': 'g'} {'título': 'b', 'autor': 'a', 'idioma original': 'esperanto', 'año de publicacion': 'g'} {'título': 'b', 'autor': 'a', 'idioma original': 'esperanto', 'año de publicacion': 'g'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "libro1[\"idioma original\"]= \"esperanto\"\n",
+    "libro2[\"idioma original\"]= \"esperanto\"\n",
+    "libro3[\"idioma original\"]= \"esperanto\"\n",
+    "libro4[\"idioma original\"]= \"esperanto\"\n",
+    "print(libro1,libro2,libro3,libro4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,10 +326,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ese no le tengo\n"
+     ]
+    }
+   ],
+   "source": [
+    "libro1 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "libro2 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "libro3 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "libro4 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "librería = [libro1,libro2,libro3,libro4]\n",
+    "\n",
+    "def buscar_libro(arg):\n",
+    "    esta = 0\n",
+    "    for libro in librería:\n",
+    "        if arg in libro[\"título\"]:\n",
+    "                esta = esta+1\n",
+    "    if esta!= 0:\n",
+    "        print(\"Si esta ese libro\")\n",
+    "    else:\n",
+    "         print(\"Ese no le tengo\")  \n",
+    "buscar_libro(\"h\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,10 +366,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'árbol': 1, 'binario': 2, 'es': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "def encontras_duplicados(*arg):\n",
+    "    resultado = {}\n",
+    "    for elemento in arg:\n",
+    "        nueva = ejer_3[elemento]\n",
+    "        resultado[nueva]=0\n",
+    "        for element in ejer_3:\n",
+    "            if nueva == element:\n",
+    "                resultado[nueva] = resultado[nueva]+1\n",
+    "    print(resultado)\n",
+    "encontras_duplicados(1,2,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -216,10 +401,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ese libro esta 2 veces en la librería 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "libro1 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "libro2 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "libro3 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "libro4 = {\"título\":\"b\",\"autor\":\"a\",\"idioma original\":\"f\",\"año de publicacion\":\"g\"}\n",
+    "\n",
+    "librería = [libro1,libro2]\n",
+    "librería2 = [libro3,libro4]\n",
+    "literatura=[librería,librería2]\n",
+    "def buscarlibro2(librerianew, titulonew):\n",
+    "    n=0\n",
+    "    for elemento in literatura[librerianew]:\n",
+    "        if elemento[\"título\"] == titulonew:\n",
+    "            n = n +1\n",
+    "            \n",
+    "    if n ==0:\n",
+    "        print(\"ese libro no esta en la librería\")\n",
+    "    else:\n",
+    "        print(\"ese libro esta\", n ,\"veces en la librería\",librerianew)\n",
+    "buscarlibro2(1,\"b\")\n",
+    "\n",
+    "                    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,10 +447,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gracias por darnos la direccion\n"
+     ]
+    }
+   ],
+   "source": [
+    "direccion = str(input(\"dame tu dirección de email\"))\n",
+    "arroba = 0\n",
+    "for caracter in direccion:\n",
+    "    if caracter == \"@\":\n",
+    "        arroba = arroba + 1\n",
+    "if arroba == 0:\n",
+    "    print(\"dirección de correo no valida\")\n",
+    "else:\n",
+    "    print(\"Gracias por darnos la direccion\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,15 +487,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dni incorrecto\n"
+     ]
+    }
+   ],
+   "source": [
+    "DNI= input(\"digame su dni\")\n",
+    "palabra='TRWAGMYFPDXBNJZSQVHLCKE'\n",
+    "def comprobardni(DNI):\n",
+    "    longitud = len(DNI[:-1])\n",
+    "    if longitud == 7 or longitud ==8:\n",
+    "        if DNI[-1] == palabra[int(DNI[:-1])%23]:\n",
+    "            print(\"Dni correcto\")\n",
+    "        else:\n",
+    "            print(\"Dni incorrecto\")\n",
+    "    else:\n",
+    "        print(\"Dni incorrecto\")\n",
+    "comprobardni(DNI)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(palabra[int(DNI[:-1])%23])\n",
+    "print(len(DNI))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
