--- a/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/03_Live_Session/02_Flujos_de_Control_while_try.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_03_Flujos_de_Control/03_Live_Session/02_Flujos_de_Control_while_try.ipynb
@@ -72,11 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import time"
+    "from time import time\n"
    ]
   },
   {
@@ -106,10 +106,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.192\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "grosor = 0.001\n",
+    "dobleces = 0\n",
+    "while grosor < 5:\n",
+    "    dobleces = dobleces + 1\n",
+    "    grosor = grosor*2\n",
+    "print(grosor)\n",
+    "print(dobleces) "
+   ]
   },
   {
    "attachments": {
@@ -292,14 +309,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Has perdido\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randint\n",
     "\n",
     "# Genera un numero aleatorio del 1 al 5\n",
-    "random_number = randint(1, 5)"
+    "random_number = randint(1, 5)\n",
+    "vidas = 2\n",
+    "while vidas > 0:\n",
+    "    numero = int(input(\"Dime un número del 1 al 5\"))\n",
+    "    if numero == random_number:\n",
+    "        break\n",
+    "        \n",
+    "    else:\n",
+    "        vidas = vidas-1\n",
+    "if vidas > 0:\n",
+    "    print(\"Ha ganado\")\n",
+    "else:\n",
+    "    print(\"Has perdido\")\n",
+    "\n"
    ]
   },
   {
@@ -310,7 +348,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -324,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
