--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Diccionarios.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Diccionarios.ipynb
@@ -61,10 +61,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'color': 'rojo',\n",
+       " 'marca': 'tesla',\n",
+       " 'modelo': 'cybertruck',\n",
+       " 'peso': 3500,\n",
+       " 'cambio automático': True}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coche_dict = {\n",
+    "    \"color\":\"rojo\",\n",
+    "    \"marca\":\"tesla\",\n",
+    "    \"modelo\":\"cybertruck\",\n",
+    "    \"peso\": 3500,\n",
+    "    \"cambio automático\":True\n",
+    "}\n",
+    "coche_dict"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,10 +110,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['rojo', 'gris']\n",
+      "3500\n",
+      "{'color': ['rojo', 'gris'], 'marca': 'tesla', 'modelo': 'cybertruck', 'peso': 3500, 'cambio automático': True}\n",
+      "6\n",
+      "{'color': ['rojo', 'gris'], 'marca': 'tesla', 'modelo': 'cybertruck', 'peso': 3500, 'cambio automático': True}\n",
+      "dict_keys(['color', 'marca', 'modelo', 'peso', 'cambio automático'])\n",
+      "dict_values([['rojo', 'gris'], 'tesla', 'cybertruck', 3500, True])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# acceso\n",
+    "print(coche_dict[\"color\"])\n",
+    "print(coche_dict[\"peso\"])\n",
+    "\n",
+    "# modificacion\n",
+    "coche_dict[\"color\"] = [\"rojo\",\"gris\"]\n",
+    "print(coche_dict)\n",
+    "\n",
+    "# añadir\n",
+    "coche_dict[\"puertas\"] = 6\n",
+    "print(coche_dict[\"puertas\"])\n",
+    "\n",
+    "# eliminar\n",
+    "del coche_dict[\"puertas\"]\n",
+    "print(coche_dict)\n",
+    "\n",
+    "# conocer las claves del diccionario\n",
+    "print(coche_dict.keys())\n",
+    "\n",
+    "# conocer los valores del diccionario\n",
+    "print(coche_dict.values())\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,11 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Podemos empezar tambien mediante un diccionario vacío"
+    "# Podemos empezar tambien mediante un diccionario vacío\n",
+    "tienda = {}\n",
+    "tienda[\"dirección\"] = \"montesa 12\"\n",
+    "tienda[\"tamaño\"] = 125\n"
    ]
   },
   {
@@ -131,10 +194,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'puertas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcoche_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mpuertas\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[31mKeyError\u001b[39m: 'puertas'"
+     ]
+    }
+   ],
+   "source": [
+    "coche_dict[\"puertas\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,10 +222,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "tesla\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero_de_puertas = coche_dict.get(\"puertas\",4)\n",
+    "print(numero_de_puertas)\n",
+    "marca = coche_dict.get(\"marca\",\"desconocida\")\n",
+    "print(marca)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,22 +253,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color\n",
+      "['rojo', 'gris']\n",
+      "marca\n",
+      "tesla\n",
+      "modelo\n",
+      "cybertruck\n",
+      "peso\n",
+      "3500\n",
+      "cambio automático\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in coche_dict:\n",
+    "    print(i)\n",
+    "    print(coche_dict[i])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color : ['rojo', 'gris']\n",
+      "marca : tesla\n",
+      "modelo : cybertruck\n",
+      "peso : 3500\n",
+      "cambio automático : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in coche_dict:\n",
+    "    print(i,\":\", coche_dict[i])\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('color', ['rojo', 'gris']), ('marca', 'tesla'), ('modelo', 'cybertruck'), ('peso', 3500), ('cambio automático', True)])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coche_dict.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color : ['rojo', 'gris']\n",
+      "marca : tesla\n",
+      "modelo : cybertruck\n",
+      "peso : 3500\n",
+      "cambio automático : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for clave,valor in coche_dict.items():\n",
+    "    print(clave,\":\",valor)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -191,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
