--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Funciones_de_usuario_I.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Funciones_de_usuario_I.ipynb
@@ -50,6 +50,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function len(obj, /)>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Muchas lineas\n",
+    "CODIGO ANALIZA v3\n",
+    "muchas lineas\n",
+    "CODIGO ANALIZA v3\n",
+    "muchas lineas \n",
+    "CODIGO ANALIZA v3\n",
+    "muchas lineas\n",
+    "CODIGO ANALIZA v3\n",
+    "'''\n",
+    "print\n",
+    "type\n",
+    "round\n",
+    "len"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,11 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Vamos a crear un conversor de km a millas"
+    "# Vamos a crear un conversor de km a millas\n",
+    "def conversor_km_millas(km):\n",
+    "    millas = 0.62*km\n",
+    "    return round(millas,1)\n"
    ]
   },
   {
@@ -114,10 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "136.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "conversor_km_millas(220)\n",
+    "millas = conversor_km_millas(220)\n",
+    "print(millas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +176,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "07:37:04.074951\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "def que_hora_es():\n",
+    "    now = datetime.now().time()\n",
+    "    return now\n",
+    "print(que_hora_es())"
+   ]
   },
   {
    "cell_type": "code",
@@ -143,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
