--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Funciones_de_usuario_II.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Funciones_de_usuario_II.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,26 @@
     "\n",
     "def que_hora_es():\n",
     "    now = datetime.now().time()\n",
-    "    return now\n"
+    "    print(now)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "07:43:57.100271\n",
+      "None <class 'NoneType'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "hora = que_hora_es()\n",
+    "print(hora, type(hora))"
    ]
   },
   {
@@ -80,13 +99,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def conversor_km_millas(distancia):\n",
     "    millas = 0.62 * distancia\n",
-    "    return round(millas,1)"
+    "    metros = 1000 * distancia\n",
+    "    return round(millas,1), millas, metros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1377.0, 1377.02, 2221000) <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "salida = conversor_km_millas(2221)\n",
+    "print(salida,type(salida))"
    ]
   },
   {
@@ -101,10 +139,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tupla contiene:\n",
+      "(12, 34, 32) <class 'tuple'>\n",
+      "lista contiene:\n",
+      "['Esto', 'es', 'una', 'liata'] <class 'list'>\n",
+      "diccionario contiene:\n",
+      "{'key1': 'valor'} <class 'dict'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[tuple, list, dict]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def recibe_mix(tupla, lista, diccionario):\n",
+    "    print(\"tupla contiene:\")\n",
+    "    print(tupla, type(tupla))\n",
+    "    print(\"lista contiene:\")\n",
+    "    print(lista, type(lista))\n",
+    "    print(\"diccionario contiene:\")\n",
+    "    print(diccionario, type(diccionario))\n",
+    "    return[type(tupla),type(lista),type(diccionario)]\n",
+    "recibe_mix((12,34,32),[\"Esto\",\"es\",\"una\",\"liata\"],{\"key1\":\"valor\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tupla contiene:\n",
+      "1 <class 'int'>\n",
+      "lista contiene:\n",
+      "hola, <class 'str'>\n",
+      "diccionario contiene:\n",
+      "True <class 'bool'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[int, str, bool]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recibe_mix(1,\"hola,\",True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,12 +233,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "type tuple doesn't define __round__ method",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m     millas = dist * \u001b[32m0\u001b[39m,\u001b[32m62\u001b[39m\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mround\u001b[39m(millas,\u001b[32m2\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[43mkm2millas\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m200\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(millas)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mkm2millas\u001b[39m\u001b[34m(dist)\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mkm2millas\u001b[39m(dist):\n\u001b[32m      4\u001b[39m     millas = dist * \u001b[32m0\u001b[39m,\u001b[32m62\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mround\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmillas\u001b[49m\u001b[43m,\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: type tuple doesn't define __round__ method"
+     ]
+    }
+   ],
    "source": [
     "# Todo lo que declaremos dentro de la función se crea UNICAMENTE para la función\n",
-    "# Fuera de la misma, esas variables no existen"
+    "# Fuera de la misma, esas variables no existen\n",
+    "def km2millas(dist):\n",
+    "    millas = dist * 0,62\n",
+    "    return round(millas,2)\n",
+    "km2millas(200)\n",
+    "print(millas)"
    ]
   },
   {
@@ -147,9 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def numero_ifs(numero):\n",
     "    if numero == 1:\n",
@@ -161,18 +293,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'out' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mnumero_ifs\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 4\u001b[39m, in \u001b[36mnumero_ifs\u001b[39m\u001b[34m(numero)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m numero == \u001b[32m1\u001b[39m:\n\u001b[32m      3\u001b[39m     out = \u001b[32m1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mout\u001b[49m\n",
+      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'out' where it is not associated with a value"
+     ]
+    }
+   ],
+   "source": [
+    "numero_ifs(2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "km2millas() missing 1 required positional argument: 'dist'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m     millas = dist * \u001b[32m0\u001b[39m,\u001b[32m62\u001b[39m\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mround\u001b[39m(millas,\u001b[32m2\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43mkm2millas\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(millas)\n",
+      "\u001b[31mTypeError\u001b[39m: km2millas() missing 1 required positional argument: 'dist'"
+     ]
+    }
+   ],
    "source": [
-    "# Si no introducimos argumentos en una función que SI tiene argumentos, salta un error de este estilo"
+    "# Si no introducimos argumentos en una función que SI tiene argumentos, salta un error de este estilo\n",
+    "def km2millas(dist):\n",
+    "    millas = dist * 0,62\n",
+    "    return round(millas,2)\n",
+    "km2millas()\n",
+    "print(millas)"
    ]
   },
   {
@@ -184,10 +348,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after function definition on line 1 (1932202375.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(otro_argumento)\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after function definition on line 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mala_funcion(otro_argumento):\n",
+    "print(otro_argumento)\n",
+    "return[otro_argumento]"
+   ]
   },
   {
    "cell_type": "code",
@@ -199,7 +376,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -213,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
