--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Listas_revisited.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Listas_revisited.ipynb
@@ -90,11 +90,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enero\n",
+      "Marzo\n"
+     ]
+    }
+   ],
    "source": [
-    "months = [\"Enero\", \"Febrero\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\"]\n",
+    "print(months[0])\n",
+    "print(months[-1])"
    ]
   },
   {
@@ -106,11 +117,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "months = [\"Enero\", \"Febrero\", \"Marzo\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\", \"Marzo\"]\n",
+    "print(months.index(\"Febrero\"))\n",
+    "print(months.index(\"Marzo\"))"
    ]
   },
   {
@@ -122,11 +144,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[34, 15, 26]\n",
+      "[34, 15, 26, 18, 22]\n",
+      "[34, 15, 26, 18, 22]\n"
+     ]
+    }
+   ],
    "source": [
-    "degrees = [22, 34, 15, 26, 18, 22]"
+    "degrees = [22, 34, 15, 26, 18, 22]\n",
+    "sub_degrees = degrees[1:4]\n",
+    "print(sub_degrees)\n",
+    "sub_degrees_alt = degrees[1:len(degrees)]\n",
+    "print(sub_degrees_alt)\n",
+    "sub_degrees_alt2 = degrees[1:]\n",
+    "print(sub_degrees_alt2)"
    ]
   },
   {
@@ -141,12 +179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Enero', 'Abril', 'Marzo']\n"
+     ]
+    }
+   ],
    "source": [
     "# Accediendo mediante el indice\n",
-    "months = [\"Enero\", \"Febrero\", \"Marzo\"]"
+    "months = [\"Enero\", \"Febrero\", \"Marzo\"]\n",
+    "months[1] = \"Abril\"\n",
+    "print(months)"
    ]
   },
   {
@@ -161,21 +209,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['honda', 'yamaha', 'suzuki', 'Kawasaki']\n",
+      "['honda', 'yamaha', 'suzuki', 'Bultaco', 'Kawasaki']\n"
+     ]
+    }
+   ],
    "source": [
     "# Con append lo añadimos al final de la lista\n",
-    "motorcycles = ['honda', 'yamaha', 'suzuki']"
+    "motorcycles = ['honda', 'yamaha', 'suzuki']\n",
+    "motorcycles.append(\"Kawasaki\")\n",
+    "print(motorcycles)\n",
+    "motorcycles.insert(3,\"Bultaco\")\n",
+    "print(motorcycles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['primeramarca']\n",
+      "['siguiente marca', 'primeramarca']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Es muy comun crear una lista vacia, y a lo largo del programa, ir añadiendo elementos"
+    "# Es muy comun crear una lista vacia, y a lo largo del programa, ir añadiendo elementos\n",
+    "lista_motos = []\n",
+    "lista_motos.append(\"primeramarca\")\n",
+    "print(lista_motos)\n",
+    "lista_motos.insert(0,\"siguiente marca\")\n",
+    "print(lista_motos)"
    ]
   },
   {
@@ -192,21 +267,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Seat', 'BMW', 'VW']\n"
+     ]
+    }
+   ],
    "source": [
-    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]"
+    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]\n",
+    "cars.remove(\"VW\")\n",
+    "print(cars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VW', 'BMW', 'VW']\n",
+      "Seat\n"
+     ]
+    }
+   ],
    "source": [
     "# Eliminar elementos por indice, y guarda ese valor en una variable\n",
-    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]"
+    "cars = [\"VW\", \"Seat\", \"BMW\", \"VW\"]\n",
+    "eliminado = cars.pop(1)\n",
+    "print(cars)\n",
+    "print(eliminado)"
    ]
   },
   {
@@ -243,11 +340,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 18, 22, 22, 26, 34]\n",
+      "[34, 26, 22, 22, 18, 15]\n",
+      "6\n",
+      "[22, 18, 26, 15, 34, 22]\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "degrees = [22, 34, 15, 26, 18, 22]"
+    "degrees = [22, 34, 15, 26, 18, 22]\n",
+    "\n",
+    "# ordenar\n",
+    "degrees.sort()\n",
+    "print(degrees)\n",
+    "degrees.sort(reverse = True)\n",
+    "print(degrees)\n",
+    "\n",
+    "# contar el numero de elementos\n",
+    "print(len(degrees))\n",
+    "\n",
+    "# invertir la lista\n",
+    "degrees = [22, 34, 15, 26, 18, 22]\n",
+    "degrees.reverse()\n",
+    "print(degrees)\n",
+    "\n",
+    "# ocurrencia, repeticion de elementos en una lista\n",
+    "print(degrees.count(22))"
    ]
   },
   {
@@ -274,11 +400,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m degrees = [\u001b[32m22\u001b[39m, \u001b[32m34\u001b[39m, \u001b[32m15\u001b[39m, \u001b[32m26\u001b[39m, \u001b[32m18\u001b[39m, \u001b[32m22\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m ultimo_elemento = \u001b[43mdegrees\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdegrees\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[31mIndexError\u001b[39m: list index out of range"
+     ]
+    }
+   ],
    "source": [
-    "degrees = [22, 34, 15, 26, 18, 22]"
+    "degrees = [22, 34, 15, 26, 18, 22]\n",
+    "ultimo_elemento = degrees[len(degrees)]"
    ]
   },
   {
@@ -298,7 +437,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -312,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
