--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Sets.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/01_Workout/Sets.ipynb
@@ -60,10 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rojo', 'naranja', 'verde', 'azul'}\n",
+      "<class 'set'>\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "colores = {\"azul\",\"rojo\",\"verde\",\"naranja\",\"azul\",\"verde\"}\n",
+    "print(colores)\n",
+    "print(type (colores))\n",
+    "print(len(colores))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,10 +89,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'verde', 'azul', 'celeste', 'burdeos', 'rojo', 'magenta'}\n",
+      "{'verde', 'naranja', 'azul', 'celeste', 'burdeos', 'rojo', 'magenta'}\n",
+      "{'verde', 'azul', 'celeste', 'burdeos', 'rojo', 'magenta'}\n",
+      "verde\n",
+      "azul\n",
+      "celeste\n",
+      "burdeos\n",
+      "rojo\n",
+      "magenta\n"
+     ]
+    }
+   ],
+   "source": [
+    "colores.add(\"magenta\")\n",
+    "print(colores)\n",
+    "\n",
+    "colores.update([\"celeste\",\"burdeos\",\"naranja\"])\n",
+    "print(colores)\n",
+    "\n",
+    "colores.remove(\"naranja\")\n",
+    "print(colores)\n",
+    "\n",
+    "for color in colores:\n",
+    "    print(color)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,15 +131,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set1 = {1,2,4,4,2,1}\n",
+    "set2 = {2,1,4}\n",
+    "\n",
+    "set1 == set2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{32, 100, 10, 45, 15, 23}\n",
+      "[32, 100, 10, 45, 15, 23]\n",
+      "[32, 100, 10, 45, 15, 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_con =[100,10,23,23,15,32,45,10,100,23]\n",
+    "print(set(lista_con))\n",
+    "print(list(set(lista_con)))\n",
+    "lista_con = list(set(lista_con))\n",
+    "print(lista_con)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -110,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
