--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/10_Ejercicio_Python_Basics_II_1.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/10_Ejercicio_Python_Basics_II_1.ipynb
@@ -87,10 +87,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raul\n",
+      "David\n",
+      "Ivan\n",
+      "['David', 'Ivan', 'Raul']\n",
+      "David\n",
+      "['David', 'Raul']\n",
+      "['David', 'Ivan', 'Raul']\n"
+     ]
+    }
+   ],
+   "source": [
+    "listapersonas = [\"Raul\",\"David\",\"Ivan\"]\n",
+    "for i in listapersonas:\n",
+    "    print(i)\n",
+    "listapersonas.sort()\n",
+    "print(listapersonas)\n",
+    "print(listapersonas[0])\n",
+    "listapersonas.remove(\"Ivan\")\n",
+    "print(listapersonas)\n",
+    "listapersonas.insert(1,\"Ivan\")\n",
+    "print(listapersonas)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,10 +155,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "(2, 3, 4, 5)\n",
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuplaejemplo = (2,)\n",
+    "print(type(tuplaejemplo))\n",
+    "tuplaejemplo2 = (3,4,5)\n",
+    "tuplaejemplo = tuplaejemplo + tuplaejemplo2\n",
+    "print(tuplaejemplo)\n",
+    "tuplaejemplo3 = (tuplaejemplo[0],tuplaejemplo[1])\n",
+    "print(tuplaejemplo3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +211,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [1,2,3,4,5,6]\n",
+    "ejer_3.reverse()\n",
+    "print(ejer_3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +259,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cien cañones por banda\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_4 = (\"cien\", \"cañones\", \"por\", \"banda\")\n",
+    "ejer_4 = \" \".join(ejer_4)\n",
+    "print(ejer_4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,10 +305,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 0, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_5 = [20, 47, 19, 29, 45, 67, 78, 90]\n",
+    "n = ejer_5.index(45)\n",
+    "ejer_5[n] = 0\n",
+    "print(ejer_5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,10 +353,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3)\n",
+    "print(ejer_6[2])\n",
+    "print(ejer_6[-3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -309,15 +402,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 45, 67, 78, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_7 = [3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]\n",
+    "solucion = ejer_7\n",
+    "for i in ejer_7[:]:\n",
+    "    if i == 3:\n",
+    "        solucion.pop(ejer_7.index(i))\n",
+    "print(solucion)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
