--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/11_Ejercicio_Python_Basics_II_2.ipynb
@@ -79,10 +79,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': [1, 2, 3], 'y': [1, 2], 'z': [1]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_1 = [(\"x\", 1), (\"x\", 2), (\"x\", 3), (\"y\", 1), (\"y\", 2), (\"z\", 1)]\n",
+    "goma = {}\n",
+    "\n",
+    "for clave, valor in ejer_1:\n",
+    "   if clave in goma:\n",
+    "      goma[clave].append(valor)\n",
+    "   else:\n",
+    "      goma[clave] = [valor]\n",
+    "print(goma)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,10 +136,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 5, 4, 2]\n",
+      "{4: 78, 2: 98, 8: 234, 5: 29, 6: 46}\n",
+      "2\n",
+      "4 : 78\n",
+      "2 : 98\n",
+      "8 : 234\n",
+      "5 : 29\n",
+      "6 : 46\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_2 = {4:78, 2:98, 8:234, 5:29}\n",
+    "claves=list(ejer_2.keys())\n",
+    "claves.sort(reverse = True)\n",
+    "print(claves)\n",
+    "\n",
+    "ejer_2[6] = 46\n",
+    "print(ejer_2)\n",
+    "\n",
+    "clave2 = list(ejer_2.keys())\n",
+    "print(clave2[1])\n",
+    "\n",
+    "for clave, valor in ejer_2.items():\n",
+    "    print(clave,\":\",ejer_2[clave])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,15 +200,33 @@
     "\n",
     "> ```ejer_3_1 = {1: 11, 2: 22}```\n",
     ">\n",
-    "> ```ejer_3_2 = {3: 33, 4: 44}```"
+    "> ```ejer_3_2 = {3: 33, 4: 44}``` -->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 11, 2: 22, 3: 33, 4: 44}\n",
+      "{1: 11, 2: 22, 3: 33, 4: 44}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3_1 = {1: 11, 2: 22}\n",
+    "ejer_3_2 = {3: 33, 4: 44}\n",
+    "ejer_3_1.update(ejer_3_2)\n",
+    "print(ejer_3_1)\n",
+    "\n",
+    "for clave, valor in ejer_3_2.items():\n",
+    "    ejer_3_1[clave] = valor\n",
+    "print(ejer_3_1)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,10 +260,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 10}\n",
+      "{1, 2, 3, 10}\n",
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1,2,3,10}\n",
+    "a.add(4)\n",
+    "print(a)\n",
+    "a.remove(4)\n",
+    "print(a)\n",
+    "a.discard(10)\n",
+    "print(a)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,10 +312,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "165\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_5 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "n=0\n",
+    "for claves, valores in ejer_5.items():\n",
+    "    n = n + ejer_5[claves]\n",
+    "print(n)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,15 +362,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 2, 4.5, ('esto', 'es'), 3, 4.5, ('esto', 'es'), 'quizás', True, True, 11]\n",
+      "[True, 2, 3, 4.5, ('esto', 'es'), 11, 'quizás']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = [11, 2, 4.5, [\"esto\", \"es\"], 3, 4.5, [\"esto\",\"es\"], \"quizás\", True, True, 11]\n",
+    "ejer6_2 = []\n",
+    "for elemento in ejer_6:\n",
+    "    if type(elemento) == list:\n",
+    "        ejer6_2.append(tuple(elemento))\n",
+    "    else:\n",
+    "        ejer6_2.append(elemento)\n",
+    "print(ejer6_2)\n",
+    "print(list(set(ejer6_2)))\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -287,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
