--- a/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/12_Ejercicio_Python_Basics_II_3.ipynb
+++ b/01_Programacion_Basica/Sprint_02/Unidad_01_Python_II_Colecciones_Funciones/02_Ejercicios_Workout/12_Ejercicio_Python_Basics_II_3.ipynb
@@ -76,10 +76,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Lunes',\n",
+       " 'Miércoles',\n",
+       " 'El número no equivale a ningún dia de la semana',\n",
+       " 'Viernes',\n",
+       " 'Domingo']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dias = {1:\"Lunes\",2:\"Martes\",3:\"Miércoles\",4:\"Jueves\",5:\"Viernes\",6:\"Sábado\",7:\"Domingo\"}\n",
+    "def numeros_to_dias(*args):\n",
+    "    resultado = []\n",
+    "    for num in args:\n",
+    "        if num in dias:\n",
+    "            resultado.append(dias[num])\n",
+    "        else:\n",
+    "            resultado.append(\"El número no equivale a ningún dia de la semana\")\n",
+    "    return resultado\n",
+    "numeros_to_dias(1,3,8,5,7)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,6 +139,39 @@
     "1  \n",
     "\n",
     "de altura variable según el argumento de entrada que indiquemos (en el ejemplo la altura sería 5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 4, 3, 2, 1]\n",
+      "[5, 4, 3, 2, 1]\n",
+      "[4, 3, 2, 1]\n",
+      "[3, 2, 1]\n",
+      "[2, 1]\n",
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def triangulo(altura): \n",
+    "    while altura > 0:\n",
+    "        largo = altura\n",
+    "        lista = []\n",
+    "        while largo >0:\n",
+    "            lista.append(largo)\n",
+    "            largo = largo-1\n",
+    "        print(lista)    \n",
+    "        altura = altura-1\n",
+    "triangulo(6)\n",
+    "            \n",
+    "        \n"
    ]
   },
   {
@@ -170,10 +229,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número 4 Es mayor que 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def comparacion(primer,segundo):\n",
+    "    if primer == segundo:\n",
+    "        print(\"Son iguales\")\n",
+    "    elif primer > segundo:\n",
+    "        print(\"El número\", primer, \"Es mayor que\", segundo)\n",
+    "    else:\n",
+    "        print(\"El número\", segundo, \"Es mayor que\", primer)\n",
+    "comparacion(4,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,10 +279,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def contador_de_letras(frase,letra):\n",
+    "    n = 0\n",
+    "    for caracter in frase:\n",
+    "        if caracter == letra:\n",
+    "            n=n+1\n",
+    "    print(n)\n",
+    "contador_de_letras(\"mañana es domingo y ayer fue viernes\",\"e\")\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,10 +329,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 1, 'y': 1, 'e': 3, 'r': 2, ' ': 4, 'f': 1, 'u': 2, 'n': 1, 'd': 1, 'i': 2, 'a': 1, 'p': 1, 'c': 1, 'o': 2, 's': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def contador_diccionario(frase):\n",
+    "    lista={}\n",
+    "    for caracter in frase:\n",
+    "        if caracter not in lista:\n",
+    "            lista[caracter] = 1\n",
+    "        else:\n",
+    "            lista[caracter] = lista[caracter] +1\n",
+    "    print(lista)\n",
+    "contador_diccionario(\"Ayer fue un dia precioso\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,15 +381,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ayer patata miercoles "
+     ]
+    }
+   ],
+   "source": [
+    "def convertidor_a_frase(*args):\n",
+    "    for elemento in args:\n",
+    "        print(elemento, end=\" \")   \n",
+    "convertidor_a_frase(\"ayer\",\"patata\",\"miercoles\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -292,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
